# vreen-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vreen-demo.qbs
share/: share.qbs
share/vreen/qml/: AudioPage.qml  ChatPage.qml  DialogsPage.qml  FriendsPage.qml  HeaderBar.qml  LoginPage.qml  MainPage.qml  NewsPage.qml  PostPage.qml  ProfilePage.qml  SideBar.qml  SideBarItem.qml  Updater.qml  Utils.js  main.qml  vreen.qmlproject
share/vreen/qml/attachments/: Audio.qml  Photo.qml  View.qml
share/vreen/qml/attachments/private/: Loader.qml
share/vreen/qml/components/: FooterBar.qml  HeaderBar.qml  HorizontalLine.qml  ImageItemDelegate.qml  ItemBarBase.qml  ItemDelegate.qml  Page.qml  PageStack.qml  PageStackWindow.qml  ScrollDecorator.qml  SimpleImageItemDelegate.qml  SubPage.qml  Units.js
share/vreen/qml/delegates/: AudioDelegate.qml  ChatDelegate.qml  WallPostDelegate.qml
src/: src.qbs
src/app/: app.qbs  declarativeview.cpp  declarativeview.h  main.cpp
